# Last5BankTransactions

./: README.md  config.py  main.py  pyproject.toml
coursework3/: funcs.py  main.py
tests/: test_funcs.py
