[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = ""
authors = ["pecheritsa <pecheritsa.roman@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
go = 'main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
